force-app/main/default/objects/Payment_Transaction_Line_Item__c/Payment_Transaction_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Refer to individual entries associated with a payment plan Line Item in the billing system.</description>
    <label>Payment Transaction Line Item</label>
    <nameField>
        <displayFormat>PT-{000000}</displayFormat>
        <label>Payment Transaction Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Transaction Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>