force-app/main/default/objects/Payment_Transaction_Line_Item__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to store Associated Account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Transaction Line Items</relationshipLabel>
    <relationshipName>Payment_Transaction_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>