force-app/main/default/objects/Payment_Transaction_Line_Item__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>Date on which payment is made.</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>