force-app/main/default/objects/Payment_Transaction_Line_Item__c/fields/Payment_Plan_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Line_Item__c</fullName>
    <description>Autopopulated with the related payment plan Line Item.</description>
    <label>Payment Plan Line Item</label>
    <referenceTo>Payment_Plan_Line_Item__c</referenceTo>
    <relationshipLabel>Payment Transaction Line Items</relationshipLabel>
    <relationshipName>Payment_Transaction_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>