force-app/main/default/objects/Payment_Transaction_Line_Item__c/fields/Payment_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference_Number__c</fullName>
    <description>Use to store the payment transaction reference number.</description>
    <label>Payment Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>